# introspection

./: .gitignore  CMakeLists.txt  README.md  TYPE_REGISTRATION.md  main.cxx
examples/: person.h
examples/game/: main.cxx
examples/http/: CMakeLists.txt  main.cxx
examples/pybind/: CMakeLists.txt  main.cxx  pyBindGenerator.h  test_bindings.py
examples/scripting/: demo.h
examples/scripting/js/: CMakeLists.txt  JavascriptBindingGenerator.cxx  JavascriptBindingGenerator.h  JavascriptBindingGenerator.hxx  README.md  binding.cxx  binding.gyp  demo.h  test.js
examples/scripting/nodejs/: CMakeLists.txt  JavascriptBindingGenerator.h  README.md  binding.cxx  binding.gyp  package.json  test.js
examples/scripting/python/: CMakeLists.txt  PythonBindingGenerator.h  README.md  binding.cxx  demo.h  pyintro.cxx  test.py
examples/socket/: CMakeLists.txt  main.cxx  websocket_gui.h
include/introspection/: JsGenerator.h  PyGenerator.h  info.h  introspectable.h  pyBindGenerator.h  type_registry.h  types.h
include/introspection/inline/: JsGenerator.hxx  PyGenerator.hxx  info.hxx  introspectable.hxx  types.hxx
macros/: CMakeLists.txt  main.cxx
template/: introspection.h  main.cxx
